--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2167,8 +2167,8 @@ figure_list:
     src: "figures/fig-46-1-a.jpg"
     zoom: true
     label: "Figure 46.1a"
-    # caption: "El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft ([[De los Rios y Rojas and Socorro 1977]]). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
-    # credit: "Images: (a and b) [[De los Rios y Rojas and Socorro 1977]], &#40;c) Lab O, (d) Lab O / João Mariano"
+    # caption: "El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft (de los Rios y Rojas and Socorro 1977). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
+    # credit: "Images: (a and b) de los Rios y Rojas and Socorro 1977, &#40;c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-1-b"
     src: "figures/fig-46-1-b.jpg"
@@ -2189,7 +2189,7 @@ figure_list:
     src: "figures/fig-46-2-a.jpg"
     zoom: true
     label: "Figure 46.2a"
-    # caption: "Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–1545. Oil on canvas, 206 × 288.5 cm (81 1/8 × 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
+    # caption: "Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–45. Oil on canvas, 206 × 288.5 cm (81 1/8 × 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-2-b"
@@ -2211,7 +2211,7 @@ figure_list:
     src: "figures/fig-46-3-a.jpg"
     zoom: true
     label: "Figure 46.3a"
-    # caption: "Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–1607. Oil on canvas, 202.5 × 152.7 cm (79 3/4 × 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
+    # caption: "Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–7. Oil on canvas, 202.5 × 152.7 cm (79 3/4 × 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-3-b"
@@ -2233,7 +2233,7 @@ figure_list:
     src: "figures/fig-46-4-a.jpg"
     zoom: true
     label: "Figure 46.4a"
-    # caption: "Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–1623. Oil on canvas, 123.2 × 132.7 cm (48 1/2 × 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
+    # caption: "Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–23. Oil on canvas, 123.2 × 132.7 cm (48 1/2 × 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-4-b"
@@ -2255,7 +2255,7 @@ figure_list:
     src: "figures/fig-46-5-a.jpg"
     zoom: true
     label: "Figure 46.5a"
-    # caption: "Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–1618. Oil on canvas, 168 × 136 cm (66 1/8 × 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
+    # caption: "Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–18. Oil on canvas, 168 × 136 cm (66 1/8 × 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) Yale University Art Gallery, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-5-b"
