--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2363,7 +2363,7 @@ figure_list:
     zoom: true
     label: "Figure 49.2"
     caption: "Amount (in grams) of the wax-resin mixture poulticed into each tissue after 1-, 5-, and 15-minute dwell times."
-    credit: "Images: Julianna Ly and Tracy Liu"
+    credit: "Image: Julianna Ly and Tracy Liu"
 
   - id: "table-49-1"
     credit: "Table: Julianna Ly"
